--- a/account/templates/account/person_center.html
+++ b/account/templates/account/person_center.html
@@ -21,7 +21,7 @@
         <div class="navbar-brand">
           <a class="navbar-item" href="{% url 'blog:index' %}">
             <img src="{% static 'account/images/l.png' %}" width="35" height="85">
-            你说什么都队
+            大横断大横断历史文化系统
           </a>      
           <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
             <span aria-hidden="true"></span>
