--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -9,16 +9,16 @@
     <link rel="stylesheet" href=" {% static 'blog/css/bulma.css' %}">
     <link rel="stylesheet" href="{% static 'blog/css/style.css' %}">
     {% block head %}
-    <title>你说什么都队的笔记首页</title>
+    <title>大横断历史文化系统</title>
     {% endblock head %}
 </head>
 <body>
 <!-- 笔记导航栏 -->
   <header class="container menu-header">
-    <nav class="navbar is-primary" role="navigation" aria-label="main navigation">
+    <nav class="navbar" role="navigation" aria-label="main navigation">
         <div class="navbar-brand">
-          <img src="{% static 'account/images/l.png' %}" width="55" height="55">
-          <h1 class="navbar-item is-size-3">你说什么都队</h1>
+          <img src="{% static 'account/images/logo.jpg' %}" width="55" height="55">
+          <h1 class="navbar-item is-size-3">大横断历史文化系统</h1>
           <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
             <span aria-hidden="true"></span>
             <span aria-hidden="true"></span>
@@ -159,8 +159,8 @@
   </section>
 
   <!-- 笔记底部通用 footer -->
-  <footer class=" footer has-background-primary  has-text-centered">
-    <p class="has-text-black">FBI OPEN THE DOOR@你说什么都队</p> 
+  <footer class=" footer has-text-centered">
+    <p class="has-text-black"></p>
     <p class="has-text-black">元旦快乐!</p> 
 
   </footer>
