--- a/templates/registration/register.html
+++ b/templates/registration/register.html
@@ -27,7 +27,7 @@
     <div class="box has-background-white" > 
         <div class="content">
             <h1 class=" is-uppercase has-text-centered has-text-weight-bold" style="padding: 0.5em 0">
-                你说什么都队
+                大横断大横断历史文化系统
             <br><span class="tag">注册</span>
             </h1>
             <hr class="dropdown-divider">
