注册登录修改

--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -35,7 +35,7 @@
     <div class="box has-background-white" > 
         <div class="content">
             <h1 class=" is-uppercase has-text-centered has-text-weight-bold" style="padding: 0.5em 0">
-                大横断大横断历史文化系统
+                欢迎登录大横断历史文化系统
             <br><span class="tag">登录</span>
             </h1>
             <hr class="dropdown-divider">
