注册登录修改

--- a/templates/registration/register.html
+++ b/templates/registration/register.html
@@ -28,7 +28,6 @@
         <div class="content">
             <h1 class=" is-uppercase has-text-centered has-text-weight-bold" style="padding: 0.5em 0">
                 欢迎注册大横断历史文化系统
-            <br><span class="tag">注册</span>
             </h1>
             <hr class="dropdown-divider">
 
@@ -69,8 +68,8 @@
 {#        {% endif %}#}
 
         <!-- 登录按钮 -->
-        <div class="submit-row">
-            <label>&nbsp;</label><input class="button is-primary is-pulled-right" type="submit" value="{% trans 'Register' %}">
+        <div class="submit-row" style="padding-top: 2em">
+            <label>&nbsp;</label><input class="button is-info is-pulled-right" type="submit" value="{% trans '注册' %}">
         </div>
     </form> 
         </div> 
