--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -36,7 +36,6 @@
         <div class="content">
             <h1 class=" is-uppercase has-text-centered has-text-weight-bold" style="padding: 0.5em 0">
                 欢迎登录大横断历史文化系统
-            <br><span class="tag">登录</span>
             </h1>
             <hr class="dropdown-divider">
         </div>            
@@ -78,7 +77,7 @@
 
         <!-- 登录按钮 -->
         <div class="submit-row">
-            <label>&nbsp;</label><input class="button is-primary is-pulled-right" type="submit" value="{% trans 'Log in' %}">
+            <label>&nbsp;</label><input class="button is-info is-pulled-right" type="submit" value="{% trans 'Log in' %}">
         </div>
     </form> 
         </div> 
