--- a/static/blog/css/style.css
+++ b/static/blog/css/style.css
@@ -1,6 +1,6 @@
-html{
-    background-color: aliceblue;
-}
+/*html{*/
+/*    background-color: aliceblue;*/
+/*}*/
 
 .menu-header{
     height: 5em;
