--- a/templates/registration/register.html
+++ b/templates/registration/register.html
@@ -13,7 +13,7 @@
 <body>
 
    
-<div class="login">
+<div class="login" style="background-image: url({%static "account/images/background.jpeg" %})">
     <div class="login-box column is-half-desktop is-three-quarters-touch">
         <!-- 判断用户是否登录，如果已经登录给出提示 -->
         {% if user.is_authenticated %}
