--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -21,7 +21,7 @@
     </p>
 {% endif %}  
    
-<div class="login">
+<div class="login" style="background-image: url({%static "account/images/background.jpeg"  %})">
     <div class="login-box column is-half-desktop is-three-quarters-touch">
         <!-- 判断用户是否登录，如果已经登录给出提示 -->
         {% if user.is_authenticated %}
@@ -32,13 +32,13 @@
             {% endblocktrans %}
          </p>
         {% endif %}
-    <div class="box has-background-white" > 
+    <div class="box has-background-white" >
         <div class="content">
             <h1 class=" is-uppercase has-text-centered has-text-weight-bold" style="padding: 0.5em 0">
                 欢迎登录大横断历史文化系统
             </h1>
             <hr class="dropdown-divider">
-        </div>            
+        </div>
     <form action="" method="post" id="login-form">
         {% csrf_token %}
         <div class="field">
@@ -55,7 +55,7 @@
             </div>
             {{ form.password.errors }}
         </div>
-          
+
         <input type="hidden" name="next" value="{% url 'account:person' %}">
 
         <!-- 错误提示 -->
@@ -66,12 +66,12 @@
               </p>
             {% endfor %}
         {% endif %}
-        
+
         <!-- 判断是否拥有找回密码连接，有则给出 -->
         {% url 'password_reset' as password_reset_url %}
         {% if password_reset_url %}
         <div class="password-reset-link">
-            <a class=" is-size-7" href="{{ password_reset_url }}">{% trans 'Forgotten your password or username?' %}</a>
+            <a class=" is-size-6" href="{{ password_reset_url }}">{% trans 'Forgotten your password or username?' %}</a>
         </div>
         {% endif %}
 
@@ -79,8 +79,8 @@
         <div class="submit-row">
             <label>&nbsp;</label><input class="button is-info is-pulled-right" type="submit" value="{% trans 'Log in' %}">
         </div>
-    </form> 
-        </div> 
+    </form>
+        </div>
     </div>
 </div>
 
