--- a/account/templates/account/person_article.html
+++ b/account/templates/account/person_article.html
@@ -25,7 +25,7 @@
                 {% for article in article_list %}
                     <tr>
                       <th>{{ forloop.counter }}</th>
-                      <td><a href="{% url 'blog:article' article.id %}" title="{{ article.title }}">{{ article.title }}</a> 
+                      <td><a href="{% url 'blog:blog' article.id %}" title="{{ article.title }}">{{ article.title }}</a>
                       </td>
                       <td>{{ article.pub_date|date }}</td>
                     </tr>
