--- a/blog/templates/blog/tags.html
+++ b/blog/templates/blog/tags.html
@@ -19,7 +19,7 @@
 {% if tag.article_set.all %}
 {% for article in tag.article_set.all %}
 <div class="box is-shadowless is-radiusless">
-    <h1 class=" is-size-5 has-text-weight-bold"><a href="{% url 'blog:article' article.id %}">{{ article.title }}</a> </h1> 
+    <h1 class=" is-size-5 has-text-weight-bold"><a href="{% url 'blog:blog' article.id %}">{{ article.title }}</a> </h1>
     <p class="has-text-grey-light is-size-7" style="margin:1em 0;">
       <span>作者：<a href="">{{ article.author }}</a> </span>&nbsp;
       <span>分类：<a href="{% url 'blog:category' article.category.slug %}" target="_blank" rel="noopener noreferrer">{{ article.category }}</a> </span>&nbsp;
@@ -28,7 +28,7 @@
     <div class="content">
       {{ article.desc }}...
 
-      <a href="{% url 'blog:article' article.id %}" class="button is-pulled-right is-info" style="margin-top: 1em">阅读更多</a>
+      <a href="{% url 'blog:blog' article.id %}" class="button is-pulled-right is-info" style="margin-top: 1em">阅读更多</a>
       <div class=" is-clearfix"></div>
     </div> 
 </div>
