--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -21,7 +21,7 @@
     </p>
 {% endif %}  
    
-<div class="login" style="background-image: url({%static "account/images/background.jpeg"  %})">
+<div class="login" style="background-image: url({%static "account/images/background.jpeg" %})">
     <div class="login-box column is-half-desktop is-three-quarters-touch">
         <!-- 判断用户是否登录，如果已经登录给出提示 -->
         {% if user.is_authenticated %}
@@ -32,7 +32,7 @@
             {% endblocktrans %}
          </p>
         {% endif %}
-    <div class="box has-background-white" >
+    <div class="box has-background-white-bis" >
         <div class="content">
             <h1 class=" is-uppercase has-text-centered has-text-weight-bold" style="padding: 0.5em 0">
                 欢迎登录大横断历史文化系统
@@ -67,15 +67,15 @@
             {% endfor %}
         {% endif %}
 
-        <!-- 判断是否拥有找回密码连接，有则给出 -->
         {% url 'password_reset' as password_reset_url %}
         {% if password_reset_url %}
         <div class="password-reset-link">
             <a class=" is-size-6" href="{{ password_reset_url }}">{% trans 'Forgotten your password or username?' %}</a>
+            <br>
+            <a class=" is-size-6" href="{{ password_reset_url }}">{% trans '返回注册' %}</a>
         </div>
         {% endif %}
 
-        <!-- 登录按钮 -->
         <div class="submit-row">
             <label>&nbsp;</label><input class="button is-info is-pulled-right" type="submit" value="{% trans 'Log in' %}">
         </div>
